--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MoCBotUtil_botname="凌玖bot"
 qq_platform = "lagrange"
-VERSION = "开发平台版本，存在各种问题，不能稳定运行"
+VERSION = "Alpha 1.2"
 ENVIRONMENT=dev
 DRIVER=~fastapi
 mocgm_enter_group_mode="whitelist"
