--- a/.env
+++ b/.env
@@ -1,11 +1,8 @@
+# 机器人名字
 MoCBotUtil_botname="凌玖bot"
+
+# 机器人基本信息，请勿修改，不然可能对bug判断产生误导，或者产生奇怪的bug
 qq_platform = "lagrange"
 VERSION = "Alpha 1.2"
-ENVIRONMENT=dev
+ENVIRONMENT=prod
 DRIVER=~fastapi
-mocgm_enter_group_mode="whitelist"
-bot_id=3549931509
-bot09_AUTH_GROUP_ID=798523753
-TAROT_PATH=".\\bot09\\plugins\\tarot\\resource"
-FORTUNE_PATH=".\\bot09\\plugins\\fortune\\resource"
-help_at_sender=true
